MDEV-20875: Galera test failure on galera.galera_autoinc_sst_mariabackup

Fixed very rare freezes possible due to premature
transition of the node to the JOINED state before
the synchronization process with the cluster is
completed.

Also fixed sporadic false warning messages:

WSREP: Failed to report last committed x:y, -110 (Connection timed out)

and

WSREP: Failed to report last committed x:y, -4 (Interrupted system call)