gcs/src/gcs_group.cpp
@@ -1203,6 +1203,10 @@ gcs_group_handle_join_msg  (gcs_group_t* group, const gcs_recv_msg_t* msg)
                 gu_info ("%d.%d (%s): State transfer %s %d.%d (%s) complete.",
                          sender_idx, sender->segment, sender->name, st_dir,
                          peer_idx, peer ? peer->segment : -1, peer_name);
+                if (GCS_NODE_STATE_JOINED != sender->status) {
+                    assert(sender->desync_count > 0);
+                    return 0; // don't deliver up
+                }
             }
         }
     }
